bynkc/tests/fixtures/negative/474_or_pattern_binding_mismatch/input.bynk
commons demo

type BookingState =
  | Held(guest: String, room: Int, days: Int, rsv: Int, note: String)
  | Confirmed(who: String, room: Int, days: Int, rsv: Int, note: String)

fn f(s: BookingState) -> Int {
  match s {
    Held(g, r, _, _, _) | Confirmed(_, r, _, rsv, _) => r
  }
}
